--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -66,22 +66,22 @@ chart6 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Recovered, group=1))+
 Dashboard
 =======================================================================
 
-Row
+Row{.no-mobile}
 -----------------------------------------------------------------------
 
-### Total Coronavirus Cases in Egypt
+### Total Coronavirus Cases in Egypt {.no-mobile}
 
 ```{r, echo=FALSE}
 valueBox(total_cases, icon = "fa-area-chart")
 ```
 
-### Total Coronavirus Deaths in Egypt
+### Total Coronavirus Deaths in Egypt {.no-mobile}
 
 ```{r, echo=FALSE}
 valueBox(total_deaths, icon = "fa-area-chart" , color="warning")
 ```
 
-### Total Coronavirus Recovered Cases in Egypt
+### Total Coronavirus Recovered Cases in Egypt {.no-mobile}
 
 ```{r, echo=FALSE}
 valueBox(total_recovered, icon = "fa-area-chart" , color = "#00DDDD")
