--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -11,6 +11,11 @@ output:
     orientation: rows
 ---
 
+
+This dashboard has been created according to <a href="https://www.worldometers.info/"> worldometers.info </a> design. In order to compensate with the lack of real time statistical data in Egypt, the given data below will be updated daily at 10:00 PM (Cairo Time).</br>
+Stay Home, Stay Safe.</br>
+
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 rm(list=ls(all=TRUE))
@@ -92,10 +97,10 @@ valueBox(total_recovered, icon = "fa-area-chart" , color = "#00DDDD")
 Row
 -----------------------------------------------------------------------
 
-### ``r paste("Deaths/Discharged :",   total_deaths, "(", round((total_deaths/closed)*100,1),"% ),","               ",paste("Recovered/Discharged :",   total_recovered, "(", round((total_recovered/closed)*100,1),"% )"))``
+### Cases which had an outcome `r "</br>"` `r paste0("Deaths/Discharged : ",   total_deaths, " (", round((total_deaths/closed)*100,1),"%)" )` `r "</br>"` `r paste0("Recovered/Discharged : ",   total_recovered, " (", round((total_recovered/closed)*100,1),"%)" )` 
 
 ```{r, echo=FALSE}
-valueBox(paste("Cloded Cases (Cases which had an outcome): ",closed))
+valueBox(paste("Cloded Cases: ",closed))
 ```
 
 ### Currently Infected Patients
