--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -115,7 +115,13 @@ Row1{data-width=20}
 ### Distibution of Cases
     
 ```{r, echo=FALSE, warning=FALSE,message=FALSE,results='asis',fig.show='asis'}
-DT::datatable(hk,options = list(pageLength = 50))
+DT::datatable(hk,class = 'cell-border stripe hover compact', rownames = FALSE , options = list(pageLength = 50))%>%formatStyle(
+  'New.Cases',
+  backgroundColor =  '#FFEEAA'
+) %>% formatStyle(
+  'New.Deaths',
+  backgroundColor =  'red'
+)%>%formatStyle(names(df),fontWeight = 'bold')
 ```
    
 Row2
