--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -115,7 +115,7 @@ Row1{data-width=20}
 ### Distibution of Cases
     
 ```{r, echo=FALSE, warning=FALSE,message=FALSE,results='asis',fig.show='asis'}
-DT::datatable(hk,class = 'cell-border stripe hover compact', rownames = FALSE , options = list(pageLength = 50))%>%formatStyle(
+DT::datatable(hk,class = 'cell-border stripe hover compact', rownames = FALSE , options = list(pageLength = 50,order = list(0, 'desc')))%>%formatStyle(
   'New.Cases',
   backgroundColor =  '#FFEEAA'
 ) %>% formatStyle(
