--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -115,13 +115,11 @@ Row1{data-width=20}
 ### Distibution of Cases
     
 ```{r, echo=FALSE, warning=FALSE,message=FALSE,results='asis',fig.show='asis'}
-DT::datatable(hk,class = 'cell-border stripe hover compact', rownames = FALSE , options = list(pageLength = 50,order = list(0, 'desc')))%>%formatStyle(
-  'New.Cases',
-  backgroundColor =  '#FFEEAA'
-) %>% formatStyle(
-  'New.Deaths',
-  backgroundColor =  'red'
-)%>%formatStyle(names(df),fontWeight = 'bold')
+DT::datatable(hk,class = 'cell-border stripe hover compact', rownames = FALSE , options = list(pageLength = 50,order = list(0, 'desc')))%>%
+  formatStyle('New.Cases', backgroundColor =  '#FFEEAA') %>% 
+  formatStyle('New.Deaths',backgroundColor =  'red')%>%
+  formatStyle(names(df),fontWeight = 'bold')%>%
+  formatStyle('Curfew',  backgroundColor = styleEqual(c(0, 1), c('#a6cee3', '#1f78b4')))
 ```
    
 Row2
