--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -82,19 +82,19 @@ Row
 ### Total Coronavirus Cases in Egypt
 
 ```{r, echo=FALSE}
-valueBox(total_cases, icon = "fa-area-chart")
+valueBox(total_cases)
 ```
 
 ### Total Coronavirus Deaths in Egypt 
 
 ```{r, echo=FALSE}
-valueBox(total_deaths, icon = "fa-area-chart" , color="warning")
+valueBox(total_deaths, color="warning")
 ```
 
 ### Total Coronavirus Recovered Cases in Egypt
 
 ```{r, echo=FALSE}
-valueBox(total_recovered, icon = "fa-area-chart" , color = "#00DDDD")
+valueBox(total_recovered , color = "#00DDDD")
 ```
 
 ### Cases which had an outcome `r "</br>"` `r paste0("Deaths/Discharged : ",   total_deaths, " (", round((total_deaths/closed)*100,1),"%)" )` `r "</br>"` `r paste0("Recovered/Discharged : ",   total_recovered, " (", round((total_recovered/closed)*100,1),"%)" )` 
@@ -165,5 +165,5 @@ DT::datatable(hk,class = 'cell-border stripe hover compact', rownames = FALSE , 
   formatStyle('New.Deaths',backgroundColor =  'red')%>%
   formatStyle(names(df),fontWeight = 'bold')%>%
   formatStyle('Curfew',  backgroundColor = styleEqual(c(0, 1), c('#a6cee3', '#1f78b4')))%>%
-       highlight()
+       highlight(on = "plotly_click" , off ="plotly_doubleclick")
 ```
