--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -58,7 +58,7 @@ chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Cases)) + scale_x_discrete(breaks 
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
     geom_smooth(aes(x=index, y=New.Cases), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
-    geom_text(label=paste("Tomorow's predication:",nd_new_case ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_case ), 
     x=10,
     y=max(New.Cases)
   )
@@ -69,7 +69,7 @@ chart2 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Deaths)) + scale_x_discrete(breaks
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
     geom_smooth(aes(x=index, y=New.Deaths+0.01), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
-    geom_text(label=paste("Tomorow's predication:",nd_new_deaths ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_deaths ), 
     x=10,
     y=max(New.Deaths)
   )
@@ -80,7 +80,7 @@ chart3 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Recovered)) + scale_x_discrete(bre
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
     geom_smooth(data = hk, aes(x=index, y=New.Recovered+0.01), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
-    geom_text(label=paste("Tomorow's predication:",nd_new_recoverd ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_recoverd ), 
     x=10,
     y=max(New.Recovered)
   )
