--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -43,7 +43,7 @@ summary_AllDF$number_of_days <- as.integer(summary_AllDF$number_of_days)
 df <- df[,c(1:8,12)]
 attach(df)
 next_day <- max(index)+1
-nd_new_case <-as.integer(exp(predict(glm(New.Cases~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
+nd_new_case <-as.integer(exp(predict(glm(Total.Cases~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
 nd_new_deaths <-as.integer(exp(predict(glm(New.Deaths+0.01~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
 nd_new_recoverd <-as.integer(exp(predict(glm(New.Recovered+0.01~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
 total_cases <- df$Total.Cases[nrow(df)]
@@ -60,13 +60,12 @@ rate_of_death <- round(rate_of_death , 2)
 
 hk <- highlight_key(df, ~Total.Cases)
 
-chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Cases)) + scale_x_discrete(breaks = xlabel)+
+chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=Total.Cases)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_smooth(aes(x=index, y=New.Cases), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
     geom_text(label=paste("Tomorrow's predication:",nd_new_case ), 
     x=10,
-    y=max(New.Cases)
+    y=max(Total.Cases)
   )
   ,tooltip = c("x", "y")) %>%
        highlight(off = "plotly_relayout")
@@ -75,7 +74,7 @@ chart2 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Deaths)) + scale_x_discrete(breaks
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
     geom_smooth(aes(x=index, y=New.Deaths+0.01), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_deaths ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_case - AllDF$Total.Cases[nrow(AllDF)] ), 
     x=10,
     y=max(New.Deaths)
   )
@@ -95,6 +94,7 @@ chart3 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Recovered)) + scale_x_discrete(bre
 
 chart4 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Cases, group=1))+ scale_x_discrete(breaks = xlabel)+
  geom_line(color="#33CCFF", size=1)+theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
+    geom_smooth(aes(x=index, y=Total.Cases), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
   geom_point(color="#33CCFF"),tooltip = c("x", "y")) %>%
        highlight(off = "plotly_relayout")
 
