--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -44,8 +44,8 @@ df <- df[,c(1:8,12)]
 attach(df)
 next_day <- max(index)+1
 nd_new_case <-as.integer(exp(predict(glm(Total.Cases~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
-nd_new_deaths <-as.integer(exp(predict(glm(New.Deaths+0.01~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
-nd_new_recoverd <-as.integer(exp(predict(glm(New.Recovered+0.01~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
+nd_new_deaths <-as.integer(exp(predict(glm(Total.Deaths~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
+nd_new_recoverd <-as.integer(exp(predict(glm(Total.Recovered~index ,family = gaussian(link = 'log') ),list(index=c(next_day)))))
 total_cases <- df$Total.Cases[nrow(df)]
 total_deaths <- df$Total.Deaths[nrow(df)]
 total_recovered <- df$Total.Recovered[nrow(df)]
@@ -60,12 +60,12 @@ rate_of_death <- round(rate_of_death , 2)
 
 hk <- highlight_key(df, ~Total.Cases)
 
-chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=Total.Cases)) + scale_x_discrete(breaks = xlabel)+
+chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Cases)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_case ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_case - AllDF$Total.Cases[nrow(AllDF)] ), 
     x=10,
-    y=max(Total.Cases)
+    y=max(New.Cases)
   )
   ,tooltip = c("x", "y")) %>%
        highlight(off = "plotly_relayout")
@@ -73,8 +73,7 @@ chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=Total.Cases)) + scale_x_discrete(break
 chart2 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Deaths)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_smooth(aes(x=index, y=New.Deaths+0.01), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_case - AllDF$Total.Cases[nrow(AllDF)] ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_deaths - AllDF$Total.Deaths[nrow(AllDF)]), 
     x=10,
     y=max(New.Deaths)
   )
@@ -84,8 +83,7 @@ chart2 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Deaths)) + scale_x_discrete(breaks
 chart3 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Recovered)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
   theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_smooth(data = hk, aes(x=index, y=New.Recovered+0.01), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_recoverd ), 
+    geom_text(label=paste("Tomorrow's predication:",nd_new_recoverd - AllDF$Total.Recovered[nrow(AllDF)]), 
     x=10,
     y=max(New.Recovered)
   )
@@ -100,11 +98,13 @@ chart4 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Cases, group=1))+ scale_x_
 
 chart5 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Deaths, group=1))+ scale_x_discrete(breaks = xlabel)+
  geom_line(color="#FF9900", size=1)+theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
+    geom_smooth(aes(x=index, y=Total.Deaths), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
   geom_point(color="#FF9900"),tooltip = c("x", "y")) %>%
        highlight(off = "plotly_relayout")
 
 chart6 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Recovered, group=1))+ scale_x_discrete(breaks = xlabel)+
  geom_line(color="#00DDDD", size=1)+theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
+    geom_smooth(data = hk, aes(x=index, y=Total.Recovered), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
   geom_point(color="#00DDDD"),tooltip = c("x", "y"))%>%
        highlight(off = "plotly_relayout")
 
