--- a/Corona.Rmd
+++ b/Corona.Rmd
@@ -62,49 +62,31 @@ hk <- highlight_key(df, ~Total.Cases)
 
 chart1 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Cases)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
-  theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_case - AllDF$Total.Cases[nrow(AllDF)] ), 
-    x=10,
-    y=max(New.Cases)
-  )
-  ,tooltip = c("x", "y")) %>%
-       highlight(off = "plotly_relayout")
+  theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))
+  ,tooltip = c("x", "y")) %>%highlight(off = "plotly_relayout")
 
 chart2 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Deaths)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
-  theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_deaths - AllDF$Total.Deaths[nrow(AllDF)]), 
-    x=10,
-    y=max(New.Deaths)
-  )
-  ,tooltip = c("x", "y")) %>%
-       highlight(off = "plotly_relayout")
+  theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))
+  ,tooltip = c("x", "y")) %>%highlight(off = "plotly_relayout")
 
 chart3 <-ggplotly(ggplot(hk, aes(x=Day, y=New.Recovered)) + scale_x_discrete(breaks = xlabel)+
   geom_bar(width = 0.3, stat = "identity")+scale_fill_manual(values = c("#6698FF", "#153E7E"))+
-  theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_text(label=paste("Tomorrow's predication:",nd_new_recoverd - AllDF$Total.Recovered[nrow(AllDF)]), 
-    x=10,
-    y=max(New.Recovered)
-  )
-  ,tooltip = c("x", "y")) %>%
-       highlight(off = "plotly_relayout")
+  theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))
+  ,tooltip = c("x", "y")) %>%highlight(off = "plotly_relayout")
 
 chart4 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Cases, group=1))+ scale_x_discrete(breaks = xlabel)+
  geom_line(color="#33CCFF", size=1)+theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_smooth(aes(x=index, y=Total.Cases), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
   geom_point(color="#33CCFF"),tooltip = c("x", "y")) %>%
        highlight(off = "plotly_relayout")
 
 chart5 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Deaths, group=1))+ scale_x_discrete(breaks = xlabel)+
  geom_line(color="#FF9900", size=1)+theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_smooth(aes(x=index, y=Total.Deaths), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
   geom_point(color="#FF9900"),tooltip = c("x", "y")) %>%
        highlight(off = "plotly_relayout")
 
 chart6 <- ggplotly(ggplot(data=hk, aes(x=Day, y=Total.Recovered, group=1))+ scale_x_discrete(breaks = xlabel)+
  geom_line(color="#00DDDD", size=1)+theme(panel.grid.major.x  = element_blank(), axis.text.x = element_text(angle = 70, hjust = 1))+
-    geom_smooth(data = hk, aes(x=index, y=Total.Recovered), method = "glm", formula = y~x,method.args = list(family = gaussian(link = 'log')))+
   geom_point(color="#00DDDD"),tooltip = c("x", "y"))%>%
        highlight(off = "plotly_relayout")
 
